--- a/requirements.txt
+++ b/requirements.txt
@@ -1,274 +1,7 @@
-absl-py==0.7.0
-aioconsole==0.1.12
-aiohttp==3.3.1
-aioinflux==0.6.1
-aiomonitor==0.4.3
-aiopg==0.16.0
-alabaster==0.7.10
-anaconda-client==1.6.5
-anaconda-navigator==1.6.9
-anaconda-project==0.8.0
-appnope==0.1.0
-appscript==1.0.1
-arrow==0.13.0
-asn1crypto==0.22.0
-astor==0.7.1
-astroid==1.5.3
-astropy==2.0.2
-async-timeout==3.0.1
-attrs==17.4.0
-awscli==1.16.81
-Babel==2.5.0
-backports.shutil-get-terminal-size==1.0.0
-basho-erlastic==2.1.1
-beautifulsoup4==4.7.1
-betfairlightweight==1.8.3
-bitarray==0.8.1
-bkcharts==0.2
-blaze==0.11.3
-bleach==2.0.0
-blosc==1.7.0
-bokeh==0.12.10
-boto==2.48.0
-boto3==1.9.87
-botocore==1.12.87
-Bottleneck==1.2.1
-brainbox==0.7.0
-bz2file==0.98
-certifi==2018.11.29
-cffi==1.10.0
-CHAID==5.0.3
-chardet==3.0.4
-ciso8601==2.0.1
-click==6.7
-cloudpickle==0.4.0
-clyent==1.2.2
-colorama==0.3.9
-conda==4.5.2
-conda-build==3.4.1
-conda-verify==2.0.0
-contextlib2==0.5.5
-cryptography==2.0.3
-cycler==0.10.0
-cymem==2.0.2
-Cython==0.26.1
-cytoolz==0.9.0.1
-dask==0.15.3
-dataclasses==0.6
-datashape==0.5.4
-deap==1.2.2
-decorator==4.1.2
-dill==0.2.9
-distributed==1.19.1
-docutils==0.14
-emoji==0.5.1
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastai==1.0.45
-fastcache==1.0.2
-fastprogress==0.1.20
-filelock==2.0.12
-flake8==3.7.5
-Flask==0.12.2
-Flask-Cors==3.0.3
-future==0.16.0
-fuzzywuzzy==0.11.0
-gast==0.2.2
-gensim==3.7.1
-gevent==1.2.2
-glob2==0.5
-gmpy2==2.0.8
-greenlet==0.4.12
-grpcio==1.18.0
-h5py==2.7.0
-heapdict==1.0.0
-html5lib==0.999999999
-hyperopt==0.1.1
-idna==2.8
-idna-ssl==1.1.0
-imageio==2.2.0
-imagesize==0.7.1
-inflection==0.3.1
-influxdb==5.2.1
-ipykernel==4.6.1
-ipython==6.1.0
-ipython-genutils==0.2.0
-ipywidgets==7.0.0
-isort==4.2.15
-itsdangerous==0.24
-jdcal==1.3
-jedi==0.10.2
-Jinja2==2.9.6
-jmespath==0.9.3
-joblib==0.12.5
-jsonschema==2.6.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
-jupyterlab==0.27.0
-jupyterlab-launcher==0.4.0
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-kiwisolver==1.0.1
-Kruskals==1.2.1
-lazy-object-proxy==1.3.1
-lime==0.1.1.32
-llvmlite==0.20.0
-locket==0.2.0
-lxml==4.1.0
-Markdown==3.0.1
-MarkupSafe==1.0
-matplotlib==3.0.2
-mca==1.0
-mccabe==0.6.1
-mistune==0.7.4
-mock==2.0.0
-mpmath==0.19
-msgpack==0.5.6
-msgpack-numpy==0.4.3.2
-msgpack-python==0.4.8
-multidict==4.5.2
-multipledispatch==0.4.9
-murmurhash==1.0.2
-mysqlclient==1.4.1
-navigator-updater==0.1.0
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.0
-nltk==3.2.4
-nose==1.3.7
-notebook==5.0.0
-numba==0.35.0+6.gaa35fb1
-numexpr==2.6.9
 numpy==1.16.1
-numpydoc==0.7.0
-nvidia-ml-py3==7.352.0
-odo==0.5.1
-olefile==0.44
-openpyxl==2.4.8
-packaging==19.0
+sklearn==0.20.2
 pandas==0.24.1
-pandocfilters==1.4.2
-parso==0.1.1
-partd==0.3.8
-path.py==10.3.1
-pathlib2==2.3.0
-patsy==0.4.1
-pbr==5.1.2
-peewee==2.10.2
-peewee-async==0.5.12
-peewee-db-evolve==0.6.8
-pep8==1.7.0
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==5.4.1
-pkginfo==1.4.1
-plac==0.9.6
-pluggy==0.6.0
-ply==3.10
-preshed==2.0.1
-prompt-toolkit==1.0.15
-protobuf==3.6.1
-psutil==5.4.0
-psycopg2==2.7.1
-psycopg2-binary==2.7.7
-ptyprocess==0.5.2
-py==1.4.34
-pycodestyle==2.5.0
-pycosat==0.6.2
-pycparser==2.18
-pycrypto==2.6.1
-pycurl==7.43.0
-pyflakes==2.1.0
-pygerduty==0.38.0
-Pygments==2.2.0
-pylint==1.7.4
-pymc3==3.6
-pymongo==3.7.2
-pyodbc==4.0.17
-pyOpenSSL==17.2.0
-pyparsing==2.3.1
-PySocks==1.6.7
-pytest==3.2.1
-pytest-aiohttp==0.3.0
-python-dateutil==2.8.0
-python3-protobuf==2.5.0
-pytz==2018.9
-PyWavelets==0.5.2
-PyYAML==3.13
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.3.1
-raven==6.10.0
-raven-aiohttp==0.7.0
-redis==3.1.0
-regex==2018.1.10
-requests==2.21.0
-riak==2.7.0
-rope==0.10.5
-rsa==3.4.2
-ruamel-yaml==0.11.14
-s3transfer==0.1.13
-savReaderWriter==3.3.0
-scikit-image==0.13.0
-scikit-learn==0.20.2
-scipy==1.2.1
-seaborn==0.9.0
-Send2Trash==1.4.2
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-sklearn==0.0
-slackclient==1.3.0
-smart-open==1.8.0
-snowballstemmer==1.2.1
-sortedcollections==0.5.3
-sortedcontainers==1.5.7
-soupsieve==1.8
-spacy==2.0.18
-Sphinx==1.6.3
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.4
-SQLAlchemy==1.1.13
-statsmodels==0.8.0
-stopit==1.1.2
-sympy==1.1.1
-tables==3.4.2
-tblib==1.3.2
-tensorboard==1.12.2
-tensorflow==1.12.0
-termcolor==1.1.0
-terminado==0.6
-terminaltables==3.1.0
-testpath==0.3.1
-Theano==1.0.4
-thinc==6.12.1
-toolz==0.9.0
-torch==1.0.1.post2
-torchvision==0.2.1
-tornado==4.5.2
-TPOT==0.9.5
-tqdm==4.31.1
-traitlets==4.3.2
-treelib==1.5.3
-typing==3.6.6
-ujson==1.35
-unicodecsv==0.14.1
-update-checker==0.16
-urllib3==1.24.1
-vaderSentiment==3.2.1
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.54.0
-Werkzeug==0.12.2
-widgetsnbextension==3.0.2
-wrapt==1.10.11
-xgboost==0.81
-xlrd==1.1.0
-XlsxWriter==1.0.2
-xlwings==0.11.4
-xlwt==1.2.0
-yarl==1.3.0
-zict==0.1.3
+keras=2.2.4
+slackclient
+vaderSentiment
+nltk
